# chat_me_ai

./: .gitignore  AGENTS.md  PROJECT_SPEC.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  db.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: admin.py  auth.py  chat.py  health.py  payments.py  profiles.py
backend/app/models/: __init__.py  candidate_profile.py  cv_processing.py
backend/app/schemas/: admin.py  auth.py  chat.py  payments.py  profile.py
backend/app/services/: admin_service.py  auth_service.py  chat_service.py  chunking_service.py  cv_parser_service.py  embedding_service.py  payment_service.py  profile_service.py  retrieval_service.py  storage_service.py
backend/scripts/: aiven_profile_storage.sql
backend/tests/: conftest.py  test_admin_api.py  test_auth_api.py  test_auth_service.py  test_chat_api.py  test_chat_service.py  test_chunking_service.py  test_config.py  test_db.py  test_embedding_service.py  test_payment_service.py  test_payments_api.py  test_profiles_api.py  test_retrieval_service.py  test_storage_service.py
docs/: architecture.md  database-schema.md  project-story.md  project_stucture.md
frontend/: .env.example  README.md  next.config.ts  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/subscription/: page.tsx
frontend/app/upload/: page.tsx
frontend/lib/: api.ts  auth.ts
(+10 files in other folders)
