[project]
name = "chat-me-ai-backend"
version = "0.1.0"
description = "FastAPI backend for Chat Me AI"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.138.2",
  "langchain==1.3.11",
  "langchain-openai==1.3.3",
  "langchain-openrouter==0.2.5",
  "pydantic-settings==2.11.0",
  "psycopg[binary]==3.3.4",
  "pypdf==6.1.3",
  "python-multipart==0.0.20",
  "supabase==2.31.0",
  "uvicorn==0.35.0",
]

[dependency-groups]
dev = [
  "pytest==8.4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
